--- a/src/app/clientes/listado-clientes/listado-clientes.component.html
+++ b/src/app/clientes/listado-clientes/listado-clientes.component.html
@@ -1,7 +1,7 @@
 <div class="container py-4">
   <div class="row justify-content-center">
-    <div class="col-12 col-md-10">
-      <h1> Lista de reservaciones </h1>
+    <div class="col-12 col-md-10" style="overflow-x: auto;">
+      <h1 style="text-align: center;"> Lista de reservaciones </h1>
       <div *ngIf="! clientes.length">No hay reservaciones por el momento</div>
       <table class="table table-hover">
         <thead>
