--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -166,11 +166,11 @@
   <hr>
   
 
-  <div class="container py-4" style="width: 100%;">
+  <div class="container py-4 tabla" >
     <div class="row justify-content-center">
-      <div class="col-12 col-md-10">
+      <div class="col-12 col-md-6">
         <h3 class="text-center mb-4">¡Contamos con hoteles en otros paises!</h3>
-        <table class="table table-hover" style="width: 100%;">
+        <table class="table table-hover" style="margin-right: auto;">
           <thead>
             <tr>
               <th scope="col"> Pais </th>
